# my-garmin-api

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: garmin-api-developer.agent.md
my_activity_api/: __init__.py  api.py  garmin_fit.py  main.py
my_garmin_api/: __init__.py  api.py  api_auth.py  garmin_cache.py  garmin_fit.py  main.py
my_garmin_api/api_routes/: __init__.py  activities_by_date.py  activity.py  health.py  workouts.py
my_garmin_api/api_routes/schemas/: __init__.py  activities.py
