[project]
name = "my-activity-api"
version = "0.1.0"
description = "Activity API service"
readme = "README.md"
authors = [
    {name = "Adam Jakab",email = "adam@jakab.pro"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "curl-cffi (>=0.15.0,<0.16.0)",
    "ua-generator (>=2.0.24,<3.0.0)"
]

[project.scripts]
app = "my_activity_api.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
